--- a/src/Component/home.css
+++ b/src/Component/home.css
@@ -172,8 +172,8 @@ input[type=submit]:hover {
     display: flex;
 }
 #cardimg{
-    width: 40%;
-    margin:10% 30% ;
+    width: 60%;
+    margin:10% auto ;
 }
 .serv2{
     width: 100%;
@@ -271,10 +271,11 @@ display: flex;
   .img2{
     display: flex;
   }
-@media screen and (max-width:500px) {
+@media screen and (max-width:600px) {
     .home{
         width: 100%;
         height: 800px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
      .content{
         display: block;
