--- a/src/Component/home.css
+++ b/src/Component/home.css
@@ -348,20 +348,20 @@ display: flex;
      }
 
       .services{
-        width: 100%;
-        
+        width: 90%;
+        margin: auto;
        
       }
     .serv1{
-        margin: auto 5%;
+        margin: auto 0px;
         display: block;
         width: 80%;
 
     }  
     .serv2{
-        margin: auto 5%;
+        margin: auto 0px;
         display: block;
-        width: 90%;
+        width: 80%;
 
     }  
 
